[package]
name = "json-patcher"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde = "1.0.219"
json-patch = { version = "4.0.0", default-features = false }
indexmap = "2.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.neon]
version = "1.1.1"
default-features = false
features = ["napi-6"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
json-patch = { version = "4.0.0", default-features = false, features = ["diff"] }
